--- a/app/src/main/res/layout/info_item.xml
+++ b/app/src/main/res/layout/info_item.xml
@@ -48,6 +48,14 @@
             android:text="Genre"
             />
 
+        <TextView
+            android:id="@+id/notes_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/genre_textView"
+            android:text="Notes"
+            />
+
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
