--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#FFB300</color>
+    <color name="colorPrimaryDark">#FB8C00</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="mainActivityBackground">#EEC696</color>
+
+    <color name="black_semi_transparent">#B2000000</color>
+    <color name="background">#E5E5E5</color>
+    <color name="half_black">#808080</color>
+    <color name="white">#FAFAFA</color>
+    <color name="white_pressed">#F1F1F1</color>
+    <color name="pink">#E91E63</color>
+    <color name="pink_pressed">#EC407A</color>
+    <color name="blue_semi_transparent">#805677FC</color>
+    <color name="blue_semi_transparent_pressed">#80738FFE</color>
 </resources>
