Major fix to the UI design finally got the grid layout that I wanted for the recycler view. The background of the app looks really good and colourful.

--- a/app/src/main/res/layout/info_item.xml
+++ b/app/src/main/res/layout/info_item.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
+    app:cardCornerRadius="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="#FFAB91">
 
@@ -36,7 +38,7 @@
             android:id="@+id/isbn_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
+            android:layout_below="@id/author_textView"
             android:text="9781447286318"
             />
 
@@ -44,7 +46,7 @@
             android:id="@+id/genre_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/author_textView"
+            android:layout_below="@id/isbn_textView"
             android:text="Genre"
             />
 
@@ -58,4 +60,4 @@
 
     </RelativeLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
