--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/mainActivityBackground"
+    android:background="@drawable/wallpaper"
     tools:context=".MainActivity">
 
     <!--android:background="@drawable/wallpaper"-->
@@ -35,7 +35,7 @@
             app:fab_colorNormal="@color/white"
             app:fab_colorPressed="@color/white_pressed"
             app:fab_size="mini"
-            app:fab_icon="@drawable/ic_add"/>
+            app:fab_icon="@drawable/ic_add_pink"/>
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_action2"
@@ -45,8 +45,6 @@
             app:fab_colorNormal="@color/white"
             app:fab_colorPressed="@color/white_pressed"
             app:fab_size="mini"
-            app:fab_icon="@drawable/ic_add"/>
+            app:fab_icon="@drawable/ic_add_pink"/>
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
-
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
