Initial commit for 2020, coming back to touch base. Also cleaning the code so that everything works (had the android canary 4.0 ruin some code hope all is well now)

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SecondActivity"
-    android:background="@color/mainActivityBackground"
+    android:background="@drawable/inputscreen"
     android:padding="8dp">
 
     <com.google.android.material.textfield.TextInputLayout
