--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -81,7 +81,7 @@ android:padding="8dp">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Notes"
-        android:inputType="textMultiLine"/>
+        android:inputType="textMultiLine|textCapSentences"/>
 </com.google.android.material.textfield.TextInputLayout>
 
 </RelativeLayout>
