--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFB300</color>
-    <color name="colorPrimaryDark">#FB8C00</color>
+    <color name="colorPrimary">#0288D1</color>
+    <color name="colorPrimaryDark">#01579B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="mainActivityBackground">#EEC696</color>
 
