--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LauncherActivity"
-    android:background="@color/colorPrimary">
+    android:background="@drawable/launcher">
 
     <com.google.android.material.textfield.TextInputEditText
         android:layout_width="wrap_content"
@@ -13,6 +13,7 @@
         android:layout_centerInParent="true"
         android:fontFamily="@font/allan"
         android:text="StarTrak"
+        android:textColor="@color/white"
         android:textSize="120dp" />
 
 </RelativeLayout>
